# -EduNet

./: .cursorrules  .gitignore  EduNet_schema.sql  EduNet_schema_actualizado.sql  README.md  ejemplo_acta_html.html  encabezado_oficial_preview.html  migracion_id_grado_secciones.sql  package-lock.json  package.json  rebuild-tauri.ps1  solucion_tipo_asignacion.sql  tailwind.config.js  tsconfig.app.json
src/: App.tsx  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plantillas/: Resumen Final Rendimiento Estudiantil 1ero y 2do año.xlsx  Resumen Final Rendimiento Estudiantil 3er año.xlsx  Resumen Final Rendimiento Estudiantil 4to año.xlsx  Resumen Final Rendimiento Estudiantil 4to año_con_marcadores.xlsx  Resumen Final Rendimiento Estudiantil 5to año.xlsx  Resumen Final Rendimiento Estudiantil 5to año_con_marcadores.xlsx  resumen_final.rs  resumen_final_app - copia.html  resumen_final_app.html  test_salida_29123456.xlsx
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: acta_resumen.rs  acta_resumen_html.rs  actas_masivas.rs  actividad_reciente.rs  calificaciones.rs  catalogo.rs  docente.rs  estudiante_pgcrp.rs  estudiantes.rs  generador_mppe_final.rs  historial.rs  institucion.rs  migracion.rs  mod.rs  pdf_estudiantes.rs  pdf_simple.rs  pendiente.rs  pgcrp.rs  pgcrp_simple.rs  plantillas.rs  resumen_excel.rs  resumen_final.rs  resumen_final_bridge.rs  tipos_evaluacion.rs
src-tauri/src/api/resumen_final/: mod.rs  service.rs
src-tauri/src/api/resumen_final/generators/: estudiantes_generator.rs  mod.rs  paginas_generator.rs  tablas_generator.rs
src-tauri/src/api/resumen_final/models/: mod.rs  resumen_models.rs
src-tauri/src/api/resumen_final/processors/: data_processor.rs  html_processor.rs  mod.rs  pdf_processor.rs
src-tauri/src/api/resumen_final/utils/: constants.rs  helpers.rs  mod.rs
src-tauri/src/config/: settings.rs
src-tauri/src/db/: connection.rs
src-tauri/src/models/: actividad_reciente.rs  calificacion.rs  catalogo.rs  docente.rs  estudiante.rs  estudiante_pgcrp.rs  historial.rs  institucion.rs  mod.rs  pendiente.rs  pgcrp.rs  pgcrp_simple.rs  tipo_evaluacion.rs
src-tauri/src/utils/: actividad_helper.rs  error.rs  mod.rs  notas.rs
(+99 files in other folders)
