[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# Elimina o modifica la sección [lib] (Tauri normalmente no necesita esto)
# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }
bytes = "1.5"
rust_xlsxwriter = "0.38.0"

