[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# Elimina o modifica la sección [lib] (Tauri normalmente no necesita esto)
# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }
bytes = "1.5"
rust_xlsxwriter = "0.38.0"
umya-spreadsheet = "2.3.0"
regex = "1.10"
futures = "0.3"
printpdf = { version = "0.6", features = ["embedded_images"] }
base64 = "0.21"
image = "0.24"
# Agregar para generación simple de PDF desde HTML
headless_chrome = "1.0"
tempfile = "3.0"

# OPCIONAL: Si quisieras editar PDFs existentes, agregarías:
# lopdf = { version = "0.34", features = ["nom_parser"] }
# pdf_forms = "0.3"

